Busy signal affixed to top-left corner, tabs now render correctly in IE and don't overlap.

--- a/htdocs/css/gbrowse.css
+++ b/htdocs/css/gbrowse.css
@@ -94,6 +94,9 @@ span.tctl         { cursor: pointer }
     padding-left:  5px;
     padding-right: 5px;
 }
+.datatitle {
+    height: 25px;
+}
 .menutitle:hover {
     text-decoration: underline;
 }
